fixed bug where skills occasionally overflowed grid.

--- a/components/CommonComponents.scss
+++ b/components/CommonComponents.scss
@@ -5,15 +5,17 @@
   padding: 3px 10px;
   font-size: xx-large;
   border-radius: 25% 25% 0 0;
-
 }
 .skillsBox{
   display: inline-grid;
-  grid-template-columns: 33.333333% 33.333333% 33.333333%;
+  grid-template-columns: 1fr 1fr 1fr;
   grid-auto-rows: 1fr;
   background-color: darken(variables.$body-bg,1%);
-  gap: 20px;
+  //gap: 20px;
   padding: 15px;
+  >div:nth-child(3n) { grid-column: 2}
+  >div:nth-child(3n+1) { grid-column: 1 }
+  >div:nth-child(3n+2) { grid-column: 3 }
 
   >div{
     text-align: center;
@@ -44,9 +46,10 @@
   .skillsBox{
     grid-template-columns: 50% 50%;
     gap: 10px;
-
-    >div>a {
-      width:min-content;
-    }
+    >div:nth-child(n) { grid-column: auto}
   }
+}
+
+.collapseButton{
+
 }
